--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -132,9 +132,10 @@ BEGIN
 	EXEC sys.xp_instance_regread N'HKEY_LOCAL_MACHINE', N'SOFTWARE\Amazon\PVDriver',N'Version',@PVDriver OUT
 END
 DECLARE @ActivePowerPlan UNIQUEIDENTIFIER
-DECLARE @HighPerformance VARCHAR(36) = '8c5e7fda-e8bf-4a96-9a85-a6e23a8c635c'
-DECLARE @Balanced  VARCHAR(36) = '381b4222-f694-41f0-9685-ff5bb260df2e'
-DECLARE @PowerSaver  VARCHAR(36)='a1841308-3541-4fab-bc81-f71556f20b4a'
+DECLARE @HighPerformance VARCHAR(36)  
+DECLARE @Balanced  VARCHAR(36) 
+DECLARE @PowerSaver  VARCHAR(36)
+SELECT @HighPerformance='8c5e7fda-e8bf-4a96-9a85-a6e23a8c635c',@Balanced='381b4222-f694-41f0-9685-ff5bb260df2e',@PowerSaver='a1841308-3541-4fab-bc81-f71556f20b4a'
 DECLARE @output TABLE(
 	output NVARCHAR(MAX)
 )
@@ -156,14 +157,19 @@ ELSE
 BEGIN
 	PRINT 'Enable xp_cmdshell to check power plan'
 END
-SELECT @IsAgentRunning = CASE WHEN status=4 THEN 1 ELSE 0 END
-FROM   sys.dm_server_services dss
-WHERE  dss.[servicename] LIKE N'SQL Server Agent (%'
+IF OBJECT_ID('sys.dm_server_services') IS NOT NULL
+BEGIN
+	SELECT @IsAgentRunning = CASE WHEN status=4 THEN 1 ELSE 0 END
+	FROM   sys.dm_server_services dss
+	WHERE  dss.[servicename] LIKE N'SQL Server Agent (%'
 
-SELECT @InstantFileInitializationEnabled=CASE WHEN instant_file_initialization_enabled='Y' THEN 1 ELSE 0 END
-FROM   sys.dm_server_services dss
-WHERE  dss.[servicename] LIKE N'SQL Server (%';
-
+	IF COL_LENGTH('sys.dm_server_services','instant_file_initialization_enabled') IS NOT NULL
+	BEGIN
+		SELECT @InstantFileInitializationEnabled=CASE WHEN instant_file_initialization_enabled='Y' THEN 1 ELSE 0 END
+		FROM   sys.dm_server_services dss
+		WHERE  dss.[servicename] LIKE N'SQL Server (%';
+	END
+END
 SELECT @ActivePowerPlan ActivePowerPlanGUID, CASE WHEN @ActivePowerPlan=@HighPerformance THEN 'High Performance' WHEN @ActivePowerPlan=@Balanced THEN 'Balanced' WHEN @ActivePowerPlan = @PowerSaver THEN 'Power Saver' ELSE NULL END AS ActivePowerPlan,
 	@ProcessorNameString as ProcessorNameString,@SystemManufacturer as SystemManufacturer,@SystemProductName as SystemProductName,@PVDriver as PVDriver,@IsAgentRunning IsAgentRunning,
 	@InstantFileInitializationEnabled InstantFileInitializationEnabled</value>
@@ -216,31 +222,117 @@ group by database_name, type</value>
 FROM sys.configurations</value>
   </data>
   <data name="SQLDatabases" xml:space="preserve">
-    <value>SELECT name,
+    <value>CREATE TABLE #sysdb(
+	[name] [sysname] NOT NULL,
+	[database_id] [int] NOT NULL,
+	[source_database_id] [int] NULL,
+	[owner_sid] [varbinary](85) NULL,
+	[create_date] [datetime] NOT NULL,
+	[compatibility_level] [tinyint] NOT NULL,
+	[collation_name] [sysname] NULL,
+	[user_access] [tinyint] NULL,
+	[is_read_only] [bit] NULL,
+	[is_auto_close_on] [bit] NOT NULL,
+	[is_auto_shrink_on] [bit] NULL,
+	[state] [tinyint] NULL,
+	[is_in_standby] [bit] NULL,
+	[is_cleanly_shutdown] [bit] NULL,
+	[is_supplemental_logging_enabled] [bit] NULL,
+	[snapshot_isolation_state] [tinyint] NULL,
+	[is_read_committed_snapshot_on] [bit] NULL,
+	[recovery_model] [tinyint] NULL,
+	[page_verify_option] [tinyint] NULL,
+	[is_auto_create_stats_on] [bit] NULL,
+	[is_auto_create_stats_incremental_on] [bit] NULL,
+	[is_auto_update_stats_on] [bit] NULL,
+	[is_auto_update_stats_async_on] [bit] NULL,
+	[is_ansi_null_default_on] [bit] NULL,
+	[is_ansi_nulls_on] [bit] NULL,
+	[is_ansi_padding_on] [bit] NULL,
+	[is_ansi_warnings_on] [bit] NULL,
+	[is_arithabort_on] [bit] NULL,
+	[is_concat_null_yields_null_on] [bit] NULL,
+	[is_numeric_roundabort_on] [bit] NULL,
+	[is_quoted_identifier_on] [bit] NULL,
+	[is_recursive_triggers_on] [bit] NULL,
+	[is_cursor_close_on_commit_on] [bit] NULL,
+	[is_local_cursor_default] [bit] NULL,
+	[is_fulltext_enabled] [bit] NULL,
+	[is_trustworthy_on] [bit] NULL,
+	[is_db_chaining_on] [bit] NULL,
+	[is_parameterization_forced] [bit] NULL,
+	[is_master_key_encrypted_by_server] [bit] NOT NULL,
+	[is_query_store_on] [bit] NULL,
+	[is_published] [bit] NOT NULL,
+	[is_subscribed] [bit] NOT NULL,
+	[is_merge_published] [bit] NOT NULL,
+	[is_distributor] [bit] NOT NULL,
+	[is_sync_with_backup] [bit] NOT NULL,
+	[is_broker_enabled] [bit] NOT NULL,
+	[log_reuse_wait] [tinyint] NULL,
+	[is_date_correlation_on] [bit] NOT NULL,
+	[is_cdc_enabled] [bit] NULL, --
+	[is_encrypted] [bit] NULL,
+	[is_honor_broker_priority_on] [bit] NULL,
+	[replica_id] [uniqueidentifier] NULL,
+	[group_database_id] [uniqueidentifier] NULL,
+	[resource_pool_id] [int] NULL,
+	[default_language_lcid] [smallint] NULL,
+	[default_language_name] [nvarchar](128) NULL,
+	[default_fulltext_language_lcid] [int] NULL,
+	[default_fulltext_language_name] [nvarchar](128) NULL,
+	[is_nested_triggers_on] [bit] NULL,
+	[is_transform_noise_words_on] [bit] NULL,
+	[two_digit_year_cutoff] [smallint] NULL,
+	[containment] [tinyint] NULL,
+	[target_recovery_time_in_seconds] [int] NULL,
+	[delayed_durability] [int] NULL,
+	[is_memory_optimized_elevate_to_snapshot_on] [bit] NULL,
+	[is_federation_member] [bit] NULL,
+	[is_remote_data_archive_enabled] [bit] NULL,
+	[is_mixed_page_allocation_on] [bit] NULL
+) 
+
+SELECT *
+INTO #sysdbcols
+FROM sys.databases 
+WHERE 1=2
+
+DECLARE @SQL NVARCHAR(MAX)
+DECLARE @cols NVARCHAR(MAX)
+SET @cols = 
+STUFF((SELECT ',' + name  
+FROM (
+	SELECT name  FROM tempdb.sys.columns WHERE OBJECT_ID = OBJECT_ID('tempdb..#sysdb')
+	INTERSECT
+	SELECT name FROM tempdb.sys.columns WHERE OBJECT_ID = OBJECT_ID('tempdb..#sysdbcols')
+	) T
+FOR XML PATH(''),TYPE).value('.','NVARCHAR(MAX)'),1,1,'')
+
+SELECT @SQL = 'INSERT INTO #sysdb(' + @cols + ')
+		SELECT ' + @cols + ' FROM sys.databases'
+
+EXEC sp_executesql @SQL
+
+SELECT name,
        database_id,
        source_database_id,
-       --owner_sid,
-	   CASE WHEN owner_sid=0x01 THEN CAST(1 AS BIT) ELSE CAST(0 AS BIT) END AS IsOwnerSA,
+       owner_sid,
        create_date,
        compatibility_level,
        collation_name,
        user_access,
-       --user_access_desc,
        is_read_only,
        is_auto_close_on,
        is_auto_shrink_on,
        state,
-       --state_desc,
        is_in_standby,
        is_cleanly_shutdown,
        is_supplemental_logging_enabled,
        snapshot_isolation_state,
-       --snapshot_isolation_state_desc,
        is_read_committed_snapshot_on,
        recovery_model,
-       --recovery_model_desc,
        page_verify_option,
-       --page_verify_option_desc,
        is_auto_create_stats_on,
        is_auto_create_stats_incremental_on,
        is_auto_update_stats_on,
@@ -267,10 +359,8 @@ FROM sys.configurations</value>
        is_merge_published,
        is_distributor,
        is_sync_with_backup,
-       --service_broker_guid,
        is_broker_enabled,
        log_reuse_wait,
-       -- log_reuse_wait_desc,
        is_date_correlation_on,
        is_cdc_enabled,
        is_encrypted,
@@ -286,23 +376,26 @@ FROM sys.configurations</value>
        is_transform_noise_words_on,
        two_digit_year_cutoff,
        containment,
-       --containment_desc,
        target_recovery_time_in_seconds,
        delayed_durability,
-       --delayed_durability_desc,
        is_memory_optimized_elevate_to_snapshot_on,
        is_federation_member,
        is_remote_data_archive_enabled,
-       is_mixed_page_allocation_on 
-FROM sys.databases</value>
+       is_mixed_page_allocation_on
+FROM #sysdb
+DROP TABLE #sysdb
+DROP TABLE #sysdbcols</value>
   </data>
   <data name="SQLDrives" xml:space="preserve">
-    <value>SELECT DISTINCT dovs.volume_mount_point AS Name,
-	dovs.total_bytes as Capacity,
-	dovs.available_bytes as FreeSpace,
-	dovs.logical_volume_name as Label
-FROM sys.master_files mf
-CROSS APPLY sys.dm_os_volume_stats(mf.database_id, mf.FILE_ID) dovs</value>
+    <value>IF OBJECT_ID('sys.dm_os_volume_stats') IS NOT NULL
+BEGIN
+	SELECT DISTINCT dovs.volume_mount_point AS Name,
+		dovs.total_bytes as Capacity,
+		dovs.available_bytes as FreeSpace,
+		dovs.logical_volume_name as Label
+	FROM sys.master_files mf
+	CROSS APPLY sys.dm_os_volume_stats(mf.database_id, mf.FILE_ID) dovs
+END</value>
   </data>
   <data name="SQLFiles" xml:space="preserve">
     <value>DECLARE @DBName SYSNAME
