Added OS Info.  Changed snapshot date logging

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -121,7 +121,6 @@
     <value>DECLARE @ProcessorNameString NVARCHAR(512)
 DECLARE @SystemManufacturer NVARCHAR(512)
 DECLARE @SystemProductName NVARCHAR(512)
-DECLARE @PVDriver NVARCHAR(512)
 DECLARE @IsAgentRunning BIT
 DECLARE @InstantFileInitializationEnabled BIT
 IF EXISTS(SELECT * FROM fn_my_permissions ( 'sys.xp_instance_regread', 'OBJECT' ) WHERE permission_name='EXECUTE')
@@ -129,7 +128,7 @@ BEGIN
 	EXEC sys.xp_instance_regread N'HKEY_LOCAL_MACHINE', N'HARDWARE\DESCRIPTION\System\CentralProcessor\0', N'ProcessorNameString',@ProcessorNameString OUT;
 	EXEC sys.xp_instance_regread N'HKEY_LOCAL_MACHINE', N'SYSTEM\HardwareConfig\Current', N'SystemManufacturer',@SystemManufacturer OUT;
 	EXEC sys.xp_instance_regread N'HKEY_LOCAL_MACHINE', N'SYSTEM\HardwareConfig\Current', N'SystemProductName', @SystemProductName OUT;
-	EXEC sys.xp_instance_regread N'HKEY_LOCAL_MACHINE', N'SOFTWARE\Amazon\PVDriver',N'Version',@PVDriver OUT
+
 END
 DECLARE @ActivePowerPlan UNIQUEIDENTIFIER
 DECLARE @HighPerformance VARCHAR(36)  
@@ -170,9 +169,14 @@ BEGIN
 		WHERE  dss.[servicename] LIKE N'SQL Server (%';
 	END
 END
+DECLARE @OfflineSchedulers INT
+SELECT @OfflineSchedulers=COUNT(*)
+FROM sys.dm_os_schedulers
+WHERE is_online=0
+
 SELECT @ActivePowerPlan ActivePowerPlanGUID, CASE WHEN @ActivePowerPlan=@HighPerformance THEN 'High Performance' WHEN @ActivePowerPlan=@Balanced THEN 'Balanced' WHEN @ActivePowerPlan = @PowerSaver THEN 'Power Saver' ELSE NULL END AS ActivePowerPlan,
-	@ProcessorNameString as ProcessorNameString,@SystemManufacturer as SystemManufacturer,@SystemProductName as SystemProductName,@PVDriver as PVDriver,@IsAgentRunning IsAgentRunning,
-	@InstantFileInitializationEnabled InstantFileInitializationEnabled</value>
+	@ProcessorNameString as ProcessorNameString,@SystemManufacturer as SystemManufacturer,@SystemProductName as SystemProductName,@IsAgentRunning IsAgentRunning,
+	@InstantFileInitializationEnabled InstantFileInitializationEnabled,@OfflineSchedulers OfflineSchedulers</value>
   </data>
   <data name="SQLAgentJobSummary" xml:space="preserve">
     <value>WITH T AS (
@@ -658,5 +662,52 @@ SELECT SourceTable,
        database_id,
        last_update_date
 FROM @Corruption</value>
+  </data>
+  <data name="SQLOSInfo" xml:space="preserve">
+    <value>DECLARE @SQL NVARCHAR(MAX);
+
+WITH cols AS (
+	SELECT 'softnuma_configuration' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'sql_memory_model' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'socket_count' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'cores_per_socket' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'numa_node_count' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'affinity_type' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'sqlserver_start_time' AS col,'DATETIME' AS typ
+	UNION ALL
+	SELECT 'os_priority_class' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'physical_memory_kb' AS col,'BIGINT' AS typ
+	UNION ALL
+	SELECT 'cpu_count' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'hyperthread_ratio' AS col,'INT' AS typ
+	UNION ALL
+	SELECT 'ms_ticks' AS col,'BIGINT' AS typ
+	UNION ALL
+	SELECT 'scheduler_count','INT'
+	UNION ALL
+	SELECT 'max_workers_count','INT'
+)
+SELECT @SQL ='SELECT ' + STUFF((SELECT ',' + CASE WHEN col='physical_memory_kb' 
+												AND COLUMNPROPERTY(OBJECT_ID('sys.dm_os_sys_info'),'physical_memory_kb','ColumnID') IS NULL 
+												AND COLUMNPROPERTY(OBJECT_ID('sys.dm_os_sys_info'),'physical_memory_in_bytes','ColumnID') IS NOT NULL 
+												THEN 'physical_memory_in_bytes/1024 as physical_memory_kb'
+												WHEN col='sqlserver_start_time' AND COLUMNPROPERTY(OBJECT_ID('sys.dm_os_sys_info'),col,'ColumnID') IS NULL
+												THEN '(SELECT create_date FROM sys.databases WHERE name=''tempdb'') as sqlserver_start_time'
+												WHEN COLUMNPROPERTY(OBJECT_ID('sys.dm_os_sys_info'),col,'ColumnID') IS NULL THEN 'CAST(NULL AS ' + typ + ') as ' + QUOTENAME(col) ELSE col END
+FROM cols
+ORDER BY col
+FOR XML PATH(''),TYPE).value('.','NVARCHAR(MAX)'),1,1,'') + '
+FROM sys.dm_os_sys_info'
+PRINT @SQL
+
+EXEC sp_executesql @SQL</value>
   </data>
 </root>
