--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -860,18 +860,21 @@ EXEC sp_executesql @SQL</value>
     <value>DBCC TRACESTATUS(-1)</value>
   </data>
   <data name="SQLStoredProcPerformance" xml:space="preserve">
-    <value>SELECT object_id,
-       database_id,
-       OBJECT_NAME(object_id, database_id) object_name,
-       total_worker_time,
-       total_elapsed_time,
-       total_logical_reads,
-       total_logical_writes,
-       total_physical_reads,
-       cached_time,
-       execution_count,
-       GETUTCDATE() AS current_time_utc
-FROM sys.dm_exec_procedure_stats
-WHERE database_id &lt;&gt; 32767;</value>
+    <value>IF OBJECT_ID('sys.dm_exec_procedure_stats') IS NOT NULL
+BEGIN
+	SELECT object_id,
+		   database_id,
+		   OBJECT_NAME(object_id, database_id) object_name,
+		   total_worker_time,
+		   total_elapsed_time,
+		   total_logical_reads,
+		   total_logical_writes,
+		   total_physical_reads,
+		   cached_time,
+		   execution_count,
+		   GETUTCDATE() AS current_time_utc
+	FROM sys.dm_exec_procedure_stats
+	WHERE database_id &lt;&gt; 32767;
+END</value>
   </data>
 </root>
