Added collection of function stats

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -894,4 +894,22 @@ FROM (SELECT record.value('(./Record/@id)[1]', 'int') AS record_id,
             AND record LIKE N'%&lt;SystemHealth&gt;%') AS x) AS y 
 ORDER BY record_id DESC OPTION (RECOMPILE);</value>
   </data>
+  <data name="SQLFunctionPerformance" xml:space="preserve">
+    <value>IF OBJECT_ID('sys.dm_exec_function_stats') IS NOT NULL
+BEGIN
+	SELECT object_id,
+		   database_id,
+		   OBJECT_NAME(object_id, database_id) object_name,
+		   total_worker_time,
+		   total_elapsed_time,
+		   total_logical_reads,
+		   total_logical_writes,
+		   total_physical_reads,
+		   cached_time,
+		   execution_count,
+		   GETUTCDATE() AS current_time_utc
+	FROM sys.dm_exec_function_stats
+	WHERE database_id &lt;&gt; 32767;
+END</value>
+  </data>
 </root>
